add fontawsome and build content two

--- a/ex3/assest/ex3.css
+++ b/ex3/assest/ex3.css
@@ -6,5 +6,20 @@
 }
 
 .imagetext{
-    margin-bottom: 7rem !important;
+    margin-bottom: 6rem;
+}
+
+.headone{
+    margin-top: 7rem;
+}
+
+.line-h{
+    position: relative;
+}  
+.line-h::after {
+    content: "";
+    position: absolute;
+    border-top: 3px solid black;
+    left: 49%;
+    width: 60px;
 }
