--- a/ex4/assest/ex4.css
+++ b/ex4/assest/ex4.css
@@ -23,6 +23,7 @@ body{
     color: black;
     margin: 30px;
 }
+
 .menuCenter .active{
     color: rgb(255, 215, 38);
 }
@@ -74,6 +75,36 @@ body{
     text-align: center;
     margin-top: 60px;
 }
+
 .headerDestination h1{
     color:rgb(85, 193, 255);
+}
+
+.imagesOneRow , .imagesTwoRow{
+    padding:20px 60px 10px 60px;
+    margin-left: 60px;
+}
+
+div.polaroid {
+    width: 30%;
+    background-color: white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    display: inline-block;
+    margin: 10px;
+}
+
+div.container {
+    text-align: left;
+    padding:10px 20px;
+}
+
+.btnView{
+    color: white;
+    background-color: yellowgreen;
+    border: none;
+    padding:10px 20px;
+    border-radius: 5px;
+    position: absolute;
+    right: 630px;
+    margin: 30px;
 }
