--- a/ex4/assest/ex4.css
+++ b/ex4/assest/ex4.css
@@ -108,3 +108,37 @@ div.container {
     right: 630px;
     margin: 30px;
 }
+
+.formPage{
+    background-color:rgb(85, 193, 255);
+    width: 100%;
+    margin-top: 200px;
+    overflow: auto;
+}
+
+.formPage h2{
+    color: white;
+    float: left;
+    margin-left: 40px;
+}
+
+.formPage form{
+    float: right;
+    margin-top: 20px;
+    margin-right: 120px;
+}
+
+.formPage input{
+    padding:5px 20px;
+}
+
+.name{
+    width: 100px;
+}
+
+.formPage button{
+    background-color: yellowgreen;
+    color: white;
+    padding:6px 20px;
+    border: none;
+}
